Fix obtaining clientId